--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <a href="https://www.instagram.com/ubterzioglu/" target="_blank" class="social-link-item">
                 <img src="cinstalogo.png" alt="Instagram" class="social-icon-img">
             </a>
-
-            <!--          
-            <a href="#" target="_blank" class="social-link-item">
-                <img src="facebook-icon.png" alt="Facebook" class="social-icon-img">
+                 
+            <a href="https://www.linkedin.com/in/ubterzioglu/" target="_blank" class="social-link-item">
+                <img src="clinkedinlogo.png" alt="Facebook" class="social-icon-img">
             </a>
+            <!--
             <a href="#" target="_blank" class="social-link-item">
                 <img src="youtube-icon.png" alt="YouTube" class="social-icon-img">
             </a>
