--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="csmallicon.png" type="image/x-icon">
 
 
-    <!-- GoadCounter -->
+    <!-- GoatCounter -->
 <script data-goatcounter="https://pressentertocode.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 
